--- a/reactproject/src/RMApage/style.css
+++ b/reactproject/src/RMApage/style.css
@@ -1,69 +1,10 @@
- /* login CSS button */
- .center-button {
-    padding: 20px 30px;
-    background-color: #72bced;
-    color: whitesmoke;
-    border: none;
-    border-radius: 10px;
-    cursor: pointer;
-    outline: none;
-    text-align: center;
-  }
+.flex-container {
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+}
 
-  .center-button:hover {
-    background-color: #2980b9; /* New color when button is hovered over */
-  }
+.flex-container > div{
+  line-height: 75px;
 
-
-/* loginAccount CSS */
-  .center {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 70vh;
-  }
-  
-  .login-form {
-    width: 300px;
-    padding: 30px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-  }
-
-  .login-form label{
-    font-weight: bold;
-  }
-  
-  .login-form input[type="text"],
-  .login-form input[type="password"] {
-    width: 95%;
-    margin-bottom: 10px;
-    padding: 8px;
-    border-radius: 3px;
-    border: 1px solid #ccc;
-  }
-  
-  .login-form button.submit-button {
-    width: 100%;
-    padding: 10px;
-    border: none;
-    background-color: #007bff;
-    color: white;
-    border-radius: 3px;
-    cursor: pointer;
-  }
-  
-  .login-form button.submit-button:hover {
-    background-color: #0056b3;
-  }
-
-
-  td{
-    text-align: center;
-  }
-
-  th{
-    width:80px;
-  }
-
-  
+}
