--- a/reactproject/src/RMApage/style.css
+++ b/reactproject/src/RMApage/style.css
@@ -4,7 +4,130 @@
   padding: 10px;
 }
 
-.flex-container > div{
+.flex-container > div {
   line-height: 75px;
+}
+
+body,
+html {
+  margin: 0;
+  padding: 0;
+}
+
+/* Layout styles */
+.container {
+  display: flex;
+  height: 100%;
+}
+
+.main-content {
+  flex: 1;
+  padding: 20px;
+}
+
+.user-content {
+  display: flex;
+  flex-direction: row;
+  justify-content: right;
+  align-items: flex-end;
+  padding: 5px;
+}
+.avatar-name-container {
+  display: flex;
+}
+
+.function {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(
+    0,
+    0,
+    0,
+    0.5
+  ); 
+  z-index: 10; 
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.overlay-content {
+  background-color: #d8dfed;
+  padding: 60px;
+  border-radius: 20px;
+  height: 100%;
+  width: 100%;
+  overflow-y: auto;
+}
+
+.overlay2 {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(
+    0,
+    0,
+    0,
+    0.5
+  ); 
+  z-index: 20; 
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.overlay2-content {
+  background-color: #d8dfed;
+  padding: 60px;
+  border-radius: 20px;
+  height: 100%;
+  width: 100%;
+  overflow-y: auto;
+}
+
+.regisProduct {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  background-color: white;
+  border-radius: 10px;
+  text-align: left;
+  padding: 10px;
+  
+}
+
+.datepicker-overlay {
+  z-index: 100;
+  width: 30%;
+  height : 70px;
+}
+
+.insertRMA {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  background-color: white;
+  border-radius: 10px;
+  text-align: left;
+}
+
+.addproduct {
+  display: flex;
+}
+
+.rmaInformation > div{
+display:flex;
+padding:10px;
 
 }
