--- a/reactproject/src/RMApage/style.css
+++ b/reactproject/src/RMApage/style.css
@@ -22,19 +22,19 @@ html {
 
 .main-content {
   flex: 1;
-  padding: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 5px;
 }
 
 .user-content {
   display: flex;
   flex-direction: row;
-  justify-content: right;
-  align-items: flex-end;
+  justify-content: space-between;
   padding: 5px;
+  
 }
-.avatar-name-container {
-  display: flex;
-}
+
 
 .function {
   display: flex;
